damage fxns in the other notebooks because idk which one we're using STILL NEEDS TESTING

--- a/sketch_stroke_digit_rnn/TrainRNN_WithDataFilter.ipynb
+++ b/sketch_stroke_digit_rnn/TrainRNN_WithDataFilter.ipynb
@@ -410,7 +410,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": null,
+   "id": "185379e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DAMAGE WEIGHTS\n",
+    "\n",
+    "def damage_smallest(model, p_smallest): # energy constraint\n",
+    "    for name, param in model.named_parameters():\n",
+    "        if param.requires_grad and param.ndim >= 2:\n",
+    "            if p_smallest == 0:\n",
+    "                continue\n",
+    "\n",
+    "            tensor = param.data\n",
+    "            weight_magnitudes = tensor.abs().view(-1)\n",
+    "            k = int(weight_magnitudes.numel() * p_smallest)\n",
+    "\n",
+    "            if k == 0:\n",
+    "                continue\n",
+    "            threshold = weight_magnitudes.kthvalue(k).values.item()\n",
+    "\n",
+    "            mask = tensor.abs() >= threshold\n",
+    "            param.data.mul_(mask)\n",
+    "\n",
+    "def damage_fas(model,  p_block, p_reflect, p_filter):\n",
+    "    for name, param in model.named_parameters():\n",
+    "        if param.requires_grad and param.ndim >= 2:\n",
+    "            if p_block + p_reflect + p_filter == 0:\n",
+    "                continue\n",
+    "\n",
+    "            tensor = param.data\n",
+    "            flat_weights = tensor.view(-1)\n",
+    "            nonzero_indices = (flat_weights!=0).nonzero(as_tuple=True)[0]\n",
+    "            num_nonzero_indices = nonzero_indices.numel()\n",
+    "            if num_nonzero_indices == 0:\n",
+    "                continue\n",
+    "\n",
+    "            # percentage of weights damaged will be taken from the number of nonzero weights\n",
+    "            # simulated fas damage occurs after energy constraint blockage\n",
+    "            num_block = int(num_nonzero_indices * p_block)\n",
+    "            num_reflect = int(num_nonzero_indices * p_reflect)\n",
+    "            num_filter = int(num_nonzero_indices * p_filter)\n",
+    "\n",
+    "            shuffled_indices = nonzero_indices[torch.randperm(num_nonzero_indices, device=flat_weights.device)]\n",
+    "\n",
+    "            indices_block = shuffled_indices[:num_block]\n",
+    "            indices_reflect = shuffled_indices[num_block:num_block+num_reflect]\n",
+    "            indices_filter = shuffled_indices[num_block+num_reflect:num_block+num_reflect+num_filter]\n",
+    "\n",
+    "            # do damage\n",
+    "            # blockage: set weights to 0\n",
+    "            if p_block != 0:\n",
+    "                flat_weights[indices_block] = 0\n",
+    "\n",
+    "            # reflect: halve weights\n",
+    "            if p_reflect != 0:\n",
+    "                flat_weights[indices_reflect] *= 0.5\n",
+    "\n",
+    "            # filter: low pass filter (lusch et al)\n",
+    "            if p_filter != 0:\n",
+    "                weights_to_filter = flat_weights[indices_filter]            # get weights before transformation\n",
+    "                signs = torch.sign(weights_to_filter)                       # get signs of weights\n",
+    "                abs_weights_to_filter = weights_to_filter.abs()             # get high_weight, should be in the 95th percentile for all weights\n",
+    "                high_weight = torch.quantile(flat_weights.abs(), 0.95)      # scale weights to mostly between -1 and 1\n",
+    "                x = abs_weights_to_filter / high_weight\n",
+    "                transformed_weights = -0.2744 * x**2 + 0.9094 * x - 0.0192\n",
+    "                gaussian_noise = torch.randn_like(transformed_weights) * 0.05\n",
+    "                transformed_weights += gaussian_noise\n",
+    "                transformed_weights = transformed_weights * signs * high_weight # rescale\n",
+    "                flat_weights[indices_filter] = transformed_weights\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e7354307",
    "metadata": {},
    "outputs": [
@@ -5425,6 +5499,11 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "model = DigitToStrokeLSTM().to(device)\n",
+    "\n",
+    "# # damage weights to simulate energy constraint and lesioning\n",
+    "# damage_smallest(model, 0.0)\n",
+    "# damage_fas(model, 0.0, 0.0, 0.0)\n",
+    "\n",
     "dx_dy_loss_fn = nn.MSELoss()\n",
     "eos_eod_loss_fn = nn.BCEWithLogitsLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
